--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Werkzeug==0.15.5
 pandas==1.0.1
 numpy==1.18.1
 scikit-learn==0.23.2
-pickle
+pickleshare==0.7.5
 matplotlib==3.1.3
 joblib==0.13.2
 scipy==1.2.1
