--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,12 @@ Werkzeug==0.15.5
 pandas==1.0.1
 numpy==1.18.1
 scikit-learn==0.23.2
-pickleshare==0.7.5
+pickle==4.0
 matplotlib==3.1.3
 joblib==0.13.2
 scipy==1.2.1
 statsmodels==0.9.0
 IPython==7.4.0
+locust == 0.14.
+
+1
